--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <div class="row max-height align-items-center">
             <div class="col-10 mx-auto col-md-6 text-center main-container p-5">
                 <h1 class="text-uppercase">counter</h1>
-                <h1 id="counter">0</h1>
+                <h1 :class="{'text-success':counter>0, 'text-danger':counter<0}" id="counter">{{ counter }}</h1>
                 <div class="btn-container d-flex justify-content-around flex-wrap">
-                    <button class="btn counterBtn prevBtn text-uppercase m-2">lower count</button>
-                    <button class="btn counterBtn nextBtn text-uppercase m-2">add count</button>
+                    <button @click="lower"  class="btn counterBtn prevBtn text-uppercase m-2">lower count</button>
+                    <button @click="add" class="btn counterBtn nextBtn text-uppercase m-2">add count</button>
                 </div>
             </div>
         </div>
