--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <div class="col-10 mx-auto col-md-6 text-center main-container p-5">
                 <h1 class="text-uppercase">counter</h1>
                 <h1 :class="{'text-success':counter>0, 'text-danger':counter<0}" id="counter">{{ counter }}</h1>
+                <!-- lo de los colores se puede  hacer con un if else tambien -->
                 <div class="btn-container d-flex justify-content-around flex-wrap">
                     <button @click="lower"  class="btn counterBtn prevBtn text-uppercase m-2">lower count</button>
                     <button @click="add" class="btn counterBtn nextBtn text-uppercase m-2">add count</button>
